--- a/reflection_template.qmd
+++ b/reflection_template.qmd
@@ -14,6 +14,7 @@ execute:
   error: false
   warning: false
   message: false
+  eval: false
 ---
 
 [**My Grade:**]{.underline} I believe my grade equivalent to course work evidenced below to be a C.
